--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="{{ .Lang }}">
-{{ partial "head.html" . }}
+  {{ partial "head.html" . }}
 
-<body>
-{{partial "search.html" .}}
-{{partial "navButtons.html" .}}
+  <body>
+    {{partial "search.html" .}} {{partial "navButtons.html" .}}
 
-<div class="singlePage">
-    <!-- Begin actual content -->
-    {{partial "header.html" .}}
+    {{/*  <div class="tocHolder">
+      <div class="pageToc">lmao</div>
+    </div>  */}}
 
-    <article class="notes">
-      <h1>{{ partial "title.html" . }}</h1>
+    <div class="singlePage">
+      <!-- Begin actual content -->
+      {{partial "header.html" .}}
 
-      <p class="meta">
-        {{ i18n "last_updated" }} {{ partial "date-fmt.html" .}} 
-          {{ partial "github.html" . }}
-      </p>
-      <ul class="tags">
+      <article class="notes">
+        <h1>{{ partial "title.html" . }}</h1>
+
+        <p class="meta">
+          {{ i18n "last_updated" }} {{ partial "date-fmt.html" .}} {{ partial "github.html" . }}
+        </p>
+        <ul class="tags">
           {{ range (.GetTerms "tags") }}
           <li><a href="{{ .Permalink }}">{{ .LinkTitle | humanize }}</a></li>
           {{ end }}
-      </ul>
-      {{partial "toc.html" .}}
-      {{partial "textprocessing.html" . }}
-    </article>
-    {{partial "footer.html" .}}
-</div>
-</body>
+        </ul>
+        {{partial "toc.html" .}} {{partial "textprocessing.html" . }}
+      </article>
+      {{partial "footer.html" .}}
+    </div>
+  </body>
 </html>
