--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -342,6 +342,10 @@ article {
 	font-size: 0.9em;
 	/* todo */
 
+    & ul {
+        padding-left: 1.2em;
+    }
+
 	& > h1 {
 		margin: 2em 0 0.3em 0;
 		font-size: 2em;
